# OpenMARE

./: .env.example  .gitignore  README.md  exporter.py  llm.py  logger.py  main.py  orchestrator.py  prompt_loader.py  pyproject.toml  requirement.txt  workspace.py
agents/: analyst.py  checker.py  srs_writer.py  stakeholder.py
evaluations/: research_evaluations.txt  results.md
evaluations/case1/: Final_SRS.docx
evaluations/case1/iteration_1/: checker_report.txt  requirements.txt  srs_draft.txt  stakeholder_needs.txt
evaluations/case1/iteration_2/: checker_report.txt  requirements_refined.txt  srs_final.txt
evaluations/case2/: Final_SRS.docx
evaluations/case2/iteration_1/: checker_report.txt  requirements.txt  srs_draft.txt  stakeholder_needs.txt
evaluations/case2/iteration_2/: checker_report.txt  requirements_refined.txt  srs_final.txt
evaluations/case3/: Final_SRS.docx
evaluations/case3/iteration_1/: checker_report.txt  requirements.txt  srs_draft.txt  stakeholder_needs.txt
evaluations/case3/iteration_2/: checker_report.txt  requirements_refined.txt  srs_final.txt
evaluations/case4/: Final_SRS.docx
evaluations/case4/iteration_1/: checker_report.txt  requirements.txt  srs_draft.txt  stakeholder_needs.txt
evaluations/case4/iteration_2/: checker_report.txt  requirements_refined.txt  srs_final.txt
evaluations/case5/: Final_SRS.docx
evaluations/case5/iteration_1/: checker_report.txt  requirements.txt  srs_draft.txt  stakeholder_needs.txt
prompts/: analyst.txt  checker.txt  srs_writer.txt  stakeholder.txt
(+3 files in other folders)
